--- a/Worldpopulation.ipynb
+++ b/Worldpopulation.ipynb
@@ -1676,6 +1676,325 @@
     "GROUP BY Continent\n",
     "ORDER BY AvgPopulation DESC;\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://ted:***@localhost:3306/ted\n",
+      "43 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>2022Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>China</td>\n",
+       "      <td>1425887337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>India</td>\n",
+       "      <td>1417173173</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>338289857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Indonesia</td>\n",
+       "      <td>275501339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Pakistan</td>\n",
+       "      <td>235824862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>218541212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>215313498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bangladesh</td>\n",
+       "      <td>171186372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>144713314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Mexico</td>\n",
+       "      <td>127504125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Japan</td>\n",
+       "      <td>123951692</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Ethiopia</td>\n",
+       "      <td>123379924</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Philippines</td>\n",
+       "      <td>115559009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Egypt</td>\n",
+       "      <td>110990103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>DR Congo</td>\n",
+       "      <td>99010212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Vietnam</td>\n",
+       "      <td>98186856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Iran</td>\n",
+       "      <td>88550570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>85341241</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>83369843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Thailand</td>\n",
+       "      <td>71697030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>67508936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>65497748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>France</td>\n",
+       "      <td>64626628</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>59893885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Italy</td>\n",
+       "      <td>59037474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Myanmar</td>\n",
+       "      <td>54179306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Kenya</td>\n",
+       "      <td>54027487</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Colombia</td>\n",
+       "      <td>51874024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>South Korea</td>\n",
+       "      <td>51815810</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>47558630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Uganda</td>\n",
+       "      <td>47249585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Sudan</td>\n",
+       "      <td>46874204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Argentina</td>\n",
+       "      <td>45510318</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>44903225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Iraq</td>\n",
+       "      <td>44496122</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>41128771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Poland</td>\n",
+       "      <td>39857145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Ukraine</td>\n",
+       "      <td>39701739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>38454327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Morocco</td>\n",
+       "      <td>37457971</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Saudi Arabia</td>\n",
+       "      <td>36408820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>35588987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Uzbekistan</td>\n",
+       "      <td>34627652</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Country  2022Population\n",
+       "0            China      1425887337\n",
+       "1            India      1417173173\n",
+       "2    United States       338289857\n",
+       "3        Indonesia       275501339\n",
+       "4         Pakistan       235824862\n",
+       "5          Nigeria       218541212\n",
+       "6           Brazil       215313498\n",
+       "7       Bangladesh       171186372\n",
+       "8           Russia       144713314\n",
+       "9           Mexico       127504125\n",
+       "10           Japan       123951692\n",
+       "11        Ethiopia       123379924\n",
+       "12     Philippines       115559009\n",
+       "13           Egypt       110990103\n",
+       "14        DR Congo        99010212\n",
+       "15         Vietnam        98186856\n",
+       "16            Iran        88550570\n",
+       "17          Turkey        85341241\n",
+       "18         Germany        83369843\n",
+       "19        Thailand        71697030\n",
+       "20  United Kingdom        67508936\n",
+       "21        Tanzania        65497748\n",
+       "22          France        64626628\n",
+       "23    South Africa        59893885\n",
+       "24           Italy        59037474\n",
+       "25         Myanmar        54179306\n",
+       "26           Kenya        54027487\n",
+       "27        Colombia        51874024\n",
+       "28     South Korea        51815810\n",
+       "29           Spain        47558630\n",
+       "30          Uganda        47249585\n",
+       "31           Sudan        46874204\n",
+       "32       Argentina        45510318\n",
+       "33         Algeria        44903225\n",
+       "34            Iraq        44496122\n",
+       "35     Afghanistan        41128771\n",
+       "36          Poland        39857145\n",
+       "37         Ukraine        39701739\n",
+       "38          Canada        38454327\n",
+       "39         Morocco        37457971\n",
+       "40    Saudi Arabia        36408820\n",
+       "41          Angola        35588987\n",
+       "42      Uzbekistan        34627652"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "#showing countries with a population greater than the population average\n",
+    "SELECT DISTINCT Country, 2022Population\n",
+    "FROM population\n",
+    "WHERE 2022Population > (SELECT AVG(2022Population) FROM population)\n",
+    "ORDER BY 2022Population DESC;\n"
+   ]
   }
  ],
  "metadata": {
